# zengine

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  Folder.DotSettings  README.md  zengine.sln  zengine.sln.DotSettings
zengarden/: CMakeLists.txt  zengarden.vcxproj  zengarden.vcxproj.filters
zengarden/app/: app.zen  app2.zen  app3.zen  app4.zen  app5.zen  as1.zen  demo.zen  function.zen  greetings-hatter.zen  julia.zen  kacsa2.zen  sample.zen  sample3.zen  sample4.zen  shadowtest.zen  shadowtest2.zen  simpleobj.zen  szavazz.zen  test.fs  test.vs  test2.fs  test2.vs
zengarden/source/: document.cpp  document.h  main.cpp  zengarden.cpp  zengarden.h
zengarden/source/commands/: command.cpp  command.h  graphCommands.cpp  graphCommands.h
zengarden/source/forms/: documentviewer.ui  movieeditor.ui  operatorSelector.ui  splineeditor.ui  zengarden.qrc  zengarden.ui
zengarden/source/graph/: filechangelistener.cpp  filechangelistener.h  grapheditor.cpp  grapheditor.h  graphwatcher.cpp  graphwatcher.h  nodewidget.cpp  nodewidget.h  operatorPanel.cpp  operatorPanel.h  operatorWidget.cpp  operatorWidget.h  operatorprototypes.cpp  operatorprototypes.h  prototypes.cpp  prototypes.h
zengarden/source/nodes/: stubloader.cpp  stubloader.h
zengarden/source/propertyeditor/: parameterwidgets.cpp  parameterwidgets.h  propertyeditor.cpp  propertyeditor.h  sloteditor.cpp  sloteditor.h  staticvalueeditor.cpp  staticvalueeditor.h  valuewidgets.cpp  valuewidgets.h
zengarden/source/shaders/: 2dtransform.vs  solidTexture.fs  solidcolor.fs  textTexture.fs  transformPos.vs  transformPosUV.vs  ui_shaders.qrc
zengarden/source/util/: c4dloader.cpp  c4dloader.h  editorComponents.cpp  editorComponents.h  glPainter.cpp  glPainter.h  meshhloader.cpp  textTexture.cpp  textTexture.h  uipainter.cpp  uipainter.h  (+2 more)
zengarden/src/: main.cpp  zengarden.cpp  zengarden.h  zengarden.ui
zengine/: CMakeLists.txt  zengine.vcxproj  zengine.vcxproj.filters
zengine/doc/: shader2.txt  shader3.txt
zengine/include/: zengine.h
zengine/source/: ghost.cpp  zengine.cpp
zengine/src/: zengine.cpp
(+338 files in other folders)
